[package]
name = "test-typst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
comemo = "0.4.0"
tera = "1.19.1"
typst = { git = "https://github.com/typst/typst.git", rev = "aace521" }
typst-pdf = { git = "https://github.com/typst/typst.git", rev = "aace521" }
